--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,9 @@ PyPDF2==2.12.1
 apscheduler==3.6.3
 asyncio==3.4.3
 click==8.1.8
-colpali_engine==0.1.1
 dash==2.11.1
 datagovindia==1.0.2
 datetime==5.1
-deepdoctection==0.37.3
 empyrical==0.5.5
 fastapi==0.115.6
 feedparser==6.0.11
@@ -16,13 +14,9 @@ folium==0.17.0
 fredapi==0.5.2
 fuzzywuzzy==0.18.0
 fyers_apiv3==3.1.4
-geneticalgorithm2==6.9.2
 gnews==0.3.7
-googletrans==4.0.0rc1
-httpx==0.27.2
-langchain_core==0.3.28
-langchain_openai==0.2.14
-langdetect==1.0.9
+deep-translator
+httpx>=0.23.0,<1
 matplotlib==3.9.0
 numpy==1.24.0
 openai==1.58.1
@@ -37,28 +31,18 @@ psycopg2==2.9.6
 pydantic==2.10.5
 pygad==3.3.1
 quantstats==0.0.64
-razorpay==1.4.2
-requests==2.32.3
-rich==13.7.0
+requests>=2.31.0,<2.33.0
 scholarly==1.7.11
-scipy==1.14.1
-seaborn==0.13.2
-setuptools==75.1.0
 shapely==2.0.1
 sqlalchemy==2.0.34
 statsmodels==0.14.4
-streetlevel==0.9.0
 tabulate==0.9.0
 textual==1.0.0
-torch==2.3.1
 tqdm==4.64.0
-transformers==4.44.2
 typer==0.9.4
 typing_extensions==4.12.2
 ujson==5.10.0
 uuid==1.30
-uvicorn==0.32.1
 vectorbt==0.26.1
-xgboost==1.7.6
 yfinance==0.2.34
 youtube_transcript_api==0.6.1
