--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ parse==1.19.0
 passlib==1.7.4
 pdfplumber==0.11.4
 plotly==5.15.0
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pydantic==2.10.5
 pygad==3.3.1
 quantstats==0.0.64
