--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "fincept-terminal"
-version = "1.0.7"
+version = "1.0.8"
 description = "A Terminal for Financial Market Analysis and Fetching all kinds of Data."
 readme = "README.md"
 authors = [
@@ -17,34 +17,59 @@ classifiers = [
 ]
 
 dependencies = [
-  "requests>=2.31.0,<2.33.0",
-  "textual==1.0.0",
-  "pandas>=2.1.0,<3.0.0",
-  "numpy>=2.0.0,<3.0.0",
-  "matplotlib==3.9.0",
-  "plotly==5.15.0",
-  "sqlalchemy==2.0.34",
-  "psycopg2-binary==2.9.10",
+  "IPython==8.29.0",
+  "PyPDF2==2.12.1",
+  "apscheduler==3.6.3",
+  "asyncio==3.4.3",
+  "click==8.1.8",
+  "datagovindia==1.0.2",
+  "datetime==5.1",
+  "empyrical-reloaded==0.5.11",
   "feedparser==6.0.11",
-  "gnews",
-  "statsmodels",
-  "quantstats",
-  "empyrical-reloaded",
-  "osmnx",
-  "shapely",
-  "PyPDF2",
-  "pdfplumber",
-  "vectorbt",
-  "fyers_apiv3",
-  "datagovindia",
-  "fredapi",
-  "openai",
+  "mplfinance",
+  "pyperclip",
+  "financedatabase==2.2.2",
+  "fredapi==0.5.2",
+  "fuzzywuzzy==0.18.0",
+  "fyers_apiv3==3.1.4",
+  "gnews==0.3.7",
   "deep-translator",
-  "scholarly",
-  "pytest",
-  "black",
-  "flake8",
-  "parse"
+  "httpx>=0.23.0,<1",
+  "matplotlib==3.9.0",
+  "numpy==1.26.4",
+  "openai==1.58.1",
+  "osmnx==1.9.4",
+  "packaging==24.1",
+  "transformers==4.49.0",
+  "pandas>=2.1.0,<3.0.0",
+  "parse==1.19.0",
+  "passlib==1.7.4",
+  "pdfplumber==0.11.4",
+  "plotly==5.15.0",
+  "psycopg2-binary==2.9.10",
+  "pydantic==2.10.5",
+  "pygad==3.3.1",
+  "quantstats==0.0.64",
+  "requests>=2.31.0,<2.33.0",
+  "pyperclip==1.9.0",
+  "scholarly==1.7.11",
+  "shapely==2.0.7",
+  "sqlalchemy==2.0.34",
+  "statsmodels==0.14.4",
+  "tabulate==0.9.0",
+  "textual==1.0.0",
+  "tqdm==4.64.0",
+  "typer==0.9.4",
+  "typing_extensions==4.12.2",
+  "ujson==5.10.0",
+  "uuid==1.30",
+  "torch==2.6.0",
+  "vectorbt==0.26.1",
+  "yfinance==0.2.54",
+  "youtube-search==2.1.2",
+  "youtube_transcript_api==0.6.1",
+  "setuptools==75.8.0",
+  "google-generativeai==0.8.4",
 ]
 
 [tool.setuptools.packages.find]
