--- a/requirements.txt
+++ b/requirements.txt
@@ -7,16 +7,21 @@ datagovindia==1.0.2
 datetime==5.1
 empyrical-reloaded==0.5.11
 feedparser==6.0.11
+mplfinance
 financedatabase==2.2.2
 fredapi==0.5.2
 fuzzywuzzy==0.18.0
 fyers_apiv3==3.1.4
 gnews==0.3.7
+pyperclip==1.9.0
 deep-translator
 httpx>=0.23.0,<1
 matplotlib==3.9.0
-numpy==1.24.0
+numpy==1.26.4
+google-generativeai==0.8.4
+torch==2.6.0
 openai==1.58.1
+transformers==4.49.0
 osmnx==1.9.4
 packaging==24.1
 pandas>=2.1.0,<3.0.0
@@ -30,7 +35,7 @@ pygad==3.3.1
 quantstats==0.0.64
 requests>=2.31.0,<2.33.0
 scholarly==1.7.11
-shapely==2.0.1
+shapely==2.0.7
 sqlalchemy==2.0.34
 statsmodels==0.14.4
 tabulate==0.9.0
@@ -43,3 +48,4 @@ uuid==1.30
 vectorbt==0.26.1
 yfinance==0.2.54
 youtube_transcript_api==0.6.1
+youtube-search==2.1.2
