--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,20 @@
-IPython==8.29.0
+Pillow==11.2.1
 PyPDF2==2.12.1
-apscheduler==3.6.3
-asyncio==3.4.3
-click==8.1.8
+PyQt5==5.15.11
 datagovindia==1.0.2
-datetime==5.1
-empyrical-reloaded==0.5.11
+dearpygui==2.0.0
 feedparser==6.0.11
-mplfinance
-financedatabase==2.2.2
-fredapi==0.5.2
-fuzzywuzzy==0.18.0
 fyers_apiv3==3.1.4
-gnews==0.3.7
-pyperclip==1.9.0
-deep-translator
-httpx>=0.23.0,<1
-matplotlib==3.9.0
-numpy==1.26.4
-google-generativeai==0.8.4
-torch==2.6.0
-openai==1.58.1
-transformers==4.49.0
-osmnx==1.9.4
-packaging==24.1
-pandas>=2.1.0,<3.0.0
-parse==1.19.0
-passlib==1.7.4
-pdfplumber==0.11.4
-plotly==5.15.0
-psycopg2-binary==2.9.10
-pydantic==2.10.5
-pygad==3.3.1
-quantstats==0.0.64
-requests>=2.31.0,<2.33.0
+numpy==2.2.6
+pandas==2.2.3
+psutil==7.0.0
+psycopg2==2.9.10
+pyaudio==0.2.14
+pyotp==2.9.0
+requests==2.31.0
 scholarly==1.7.11
-shapely==2.0.7
-sqlalchemy==2.0.34
-statsmodels==0.14.4
-tabulate==0.9.0
-textual==1.0.0
-tqdm==4.64.0
-typer==0.9.4
-typing_extensions==4.12.2
-ujson==5.10.0
+scipy==1.15.3
+ta==0.11.0
 uuid==1.30
-vectorbt==0.26.1
-yfinance==0.2.54
-youtube_transcript_api==0.6.1
-youtube-search==2.1.2
-pyqlib==0.9.6
+wikipedia==1.4.0
+yfinance==0.2.61
