--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "uuid==1.30",
     "wikipedia==1.4.0",
     "yfinance==0.2.61",
+    "duckdb==1.3.2"
 ]
 
 [tool.setuptools.packages.find]
