--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,17 +29,17 @@ jobs:
             args: '--target x86_64-pc-windows-msvc'
             os_name: 'Windows'
             arch: 'x64'
-
+    
     runs-on: ${{ matrix.platform }}
-
+    
     defaults:
       run:
         working-directory: ./fincept-terminal-desktop
-
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
+        
       - name: Install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-22.04'
         run: |
@@ -63,54 +63,28 @@ jobs:
             libnss3-dev \
             libxss1 \
             libasound2-dev
-
-      - name: Fix missing CSS file (all platforms)
-        run: |
-          if [ ! -f "src/app.css" ]; then
-            echo "/* Global CSS styles */" > src/app.css
-            echo "@tailwind base;" >> src/app.css
-            echo "@tailwind components;" >> src/app.css
-            echo "@tailwind utilities;" >> src/app.css
-            echo "" >> src/app.css
-            echo "/* Custom app styles */" >> src/app.css
-            echo "body {" >> src/app.css
-            echo "  margin: 0;" >> src/app.css
-            echo "  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen'," >> src/app.css
-            echo "    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue'," >> src/app.css
-            echo "    sans-serif;" >> src/app.css
-            echo "  -webkit-font-smoothing: antialiased;" >> src/app.css
-            echo "  -moz-osx-font-smoothing: grayscale;" >> src/app.css
-            echo "}" >> src/app.css
-            echo "" >> src/app.css
-            echo "#root {" >> src/app.css
-            echo "  height: 100vh;" >> src/app.css
-            echo "  width: 100vw;" >> src/app.css
-            echo "}" >> src/app.css
-            echo "Created missing app.css file"
-          else
-            echo "app.css already exists"
-          fi
-
+          
+            
       - name: Rust setup
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || matrix.platform == 'ubuntu-22.04' && 'x86_64-unknown-linux-gnu' || 'x86_64-pc-windows-msvc' }}
-
+          
       - name: Rust cache
         uses: swatinem/rust-cache@v2
         with:
           workspaces: './fincept-terminal-desktop/src-tauri -> target'
-
+          
       - name: Sync node version and setup cache
         uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
           cache: 'npm'
           cache-dependency-path: './fincept-terminal-desktop/package-lock.json'
-
+          
       - name: Install frontend dependencies
         run: npm install
-
+        
       - name: Build the app
         uses: tauri-apps/tauri-action@v0
         env:
@@ -118,7 +92,7 @@ jobs:
         with:
           projectPath: './fincept-terminal-desktop'
           args: ${{ matrix.args }}
-
+          
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -135,14 +109,17 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-
+    permissions:
+      contents: write
+      pull-requests: write
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
-
+          
       - name: Get version from Cargo.toml
         id: get_version
         run: |
@@ -152,7 +129,7 @@ jobs:
           else
             echo "version=1.0.0" >> $GITHUB_OUTPUT
           fi
-
+          
       - name: Create download section
         run: |
           RUN_ID="${{ github.run_id }}"
@@ -182,7 +159,7 @@ jobs:
           echo "- **Windows**: Download the \`.msi\` file and run the installer" >> download_section.md
           echo "" >> download_section.md
           echo "---" >> download_section.md
-
+          
       - name: Update README
         run: |
           README_PATH="fincept-terminal-desktop/README.md"
@@ -237,7 +214,7 @@ jobs:
           fi
           
           rm -f download_section.md
-
+          
       - name: Commit and push changes
         run: |
           git config --local user.email "action@github.com"
