--- a/fincept-terminal-desktop/package.json
+++ b/fincept-terminal-desktop/package.json
@@ -41,14 +41,19 @@
     "@tauri-apps/api": "^2.8.0",
     "@tauri-apps/plugin-http": "^2.5.2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-sql": "^2.3.0",
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dexie": "^4.2.0",
     "embla-carousel-react": "^8.6.0",
     "fyers-web-sdk-v3": "^1.3.1",
+    "jmespath": "^0.16.0",
+    "jsonata": "^2.1.0",
+    "jsonpath": "^1.1.1",
     "langchain": "^0.3.34",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
@@ -59,8 +64,10 @@
     "react-confetti": "^6.4.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.4",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
@@ -69,6 +76,8 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
+    "@types/jmespath": "^0.15.2",
+    "@types/jsonpath": "^0.2.4",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
