--- a/fincept-terminal-desktop/package.json
+++ b/fincept-terminal-desktop/package.json
@@ -58,6 +58,7 @@
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "ollama": "^0.6.0",
+    "otpauth": "^9.4.1",
     "otplib": "^12.0.1",
     "playwright": "^1.55.1",
     "react": "^19.1.0",
