--- a/fincept-terminal-desktop/src-tauri/Cargo.toml
+++ b/fincept-terminal-desktop/src-tauri/Cargo.toml
@@ -24,4 +24,9 @@ tauri-plugin-cors-fetch = "4"
 tauri-plugin-sql = { version = "2", features = ["sqlite"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+sha2 = "0.10"
+yahoo_finance_api = "1.2"
+tokio = { version = "1", features = ["full"] }
+anyhow = "1.0"
+time = "0.3"
 
