feat: add multilingual README support for 8 languages
- Add automated translation workflow for README
- Support for Spanish, Chinese, Japanese, French, German, Korean, and Hindi
- Add language selector links in main README
- Configure sequential translation to avoid conflicts

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,13 @@ fincept_env
 *.md
 *.db
 !README.md
+!README.es.md
+!README.fr.md
+!README.zh-CN.md
+!README.ja.md
+!README.ko.md
+!README.de.md
+!README.hi.md
 python
 treeview.py
 testing
