--- a/.github/workflows/translate-readme.yml
+++ b/.github/workflows/translate-readme.yml
@@ -34,16 +34,29 @@ jobs:
         uses: dephraiim/translate-readme@main
         with:
           LANG: fr
+
       - name: Translate to Korean
         uses: dephraiim/translate-readme@main
         with:
           LANG: ko
+
       - name: Translate to German
         uses: dephraiim/translate-readme@main
         with:
           LANG: de
+
       - name: Translate to Hindi
         uses: dephraiim/translate-readme@main
         with:
           LANG: hi
+
+      - name: Move translated files to docs/translations
+        run: |
+          mkdir -p docs/translations
+          mv README.*.md docs/translations/ 2>/dev/null || true
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add docs/translations/
+          git commit -m "📝 Move translated READMEs to docs/translations/" || echo "No changes to commit"
+          git push || echo "No changes to push"
 
