--- a/.gitignore
+++ b/.gitignore
@@ -11,16 +11,11 @@ build.txt
 cmder
 reqgen.py
 fincept_env
-*.md
 *.db
+# Allow specific markdown files
 !README.md
-!README.es.md
-!README.fr.md
-!README.zh-CN.md
-!README.ja.md
-!README.ko.md
-!README.de.md
-!README.hi.md
+!CLAUDE.md
+!docs/**/*.md
 python
 treeview.py
 testing
