--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,6 +98,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          projectPath: fincept-terminal-desktop
           args: ${{ matrix.args }}
 
       - name: Prepare artifacts with proper naming
