feat: Add 19 new data source Rust bridges
- Added FRED, CoinGecko, WorldBank, Trading Economics, EconDB
- Added government sources: Canada, UK, Australia, Japan, Germany
- Added regional: Singapore, HK, France, Switzerland, Spain, ADB
- Added specialized: OpenAFRICA, Economic Calendar, Databento, SentinelHub
- Updated mod.rs and lib.rs with 107 new commands
- Added documentation

--- a/fincept-terminal-desktop/.gitignore
+++ b/fincept-terminal-desktop/.gitignore
@@ -29,3 +29,4 @@ src-tauri/target
 # Python embeddable package (download separately)
 src-tauri/resources/python/
 !src-tauri/resources/scripts/
+fincept-terminal-desktop/nul
