--- a/.gitignore
+++ b/.gitignore
@@ -54,4 +54,4 @@ tempdist
 settings.json
 watchlist_settings.json
 .DS_Storenul 
-**/.claude/
+**/.claude/"fincept-terminal-desktop/src-tauri/resources/bun/" 
