--- a/fincept-terminal-desktop/package.json
+++ b/fincept-terminal-desktop/package.json
@@ -42,7 +42,9 @@
     "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-http": "^2.5.2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-shell": "^2.3.3",
     "@tauri-apps/plugin-sql": "^2.3.0",
+    "@types/react-grid-layout": "^1.3.5",
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
@@ -68,6 +70,7 @@
     "react-confetti": "^6.4.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.0",
+    "react-grid-layout": "^1.5.2",
     "react-markdown": "^10.1.0",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.4",
